--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * The patch also adds dcterms:creator to rss items that have a known author.
   * Support pagespec "functions" with no parameters, like included() in the
     conditional plugin.
+  * Add time=mtime option to postsparkline.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 19:26:14 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 12 Aug 2007 05:17:23 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
