--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -4,13 +4,13 @@ post it to [[bugs]] instead. Link items to [[todo/done]] when done.
 
 [[if test="enabled(postsparkline)"
 then="""
-How long will it take your todo item to be fixed? Well...
+How long will it take your todo item to be fixed? Well...  
 [[postsparkline pages="todo/* and !todo/done and !link(todo/done) and
-!link(patch) and !link(wishlist) and !todo/*/*" max=120
-formula=perday style=bar barwidth=2 barspacing=1 height=13]]
-this many are being added per day  
-[[postsparkline pages="todo/* and !todo and link(todo/done)" max=120
-formula=perday time=mtime style=bar barwidth=2 barspacing=1 height=13]]
+!link(patch) and !link(wishlist) and !todo/*/*"
+max=12 ymin=10 formula=permonth style=bar barwidth=2 barspacing=1 height=13]]
+this many are being added per month  
+[[postsparkline pages="todo/* and !todo and link(todo/done)"
+max=12 ymin=10 formula=permonth time=mtime style=bar barwidth=2 barspacing=1 height=13]]
 while this many are being fixed.
 """]]
 
