--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -5,13 +5,16 @@ post it to [[bugs]] instead. Link items to [[todo/done]] when done.
 [[if test="enabled(postsparkline)"
 then="""
 How long will it take your todo item to be fixed? Well...  
-[[postsparkline pages="todo/* and !todo/done and !link(todo/done) and
-!link(patch) and !link(wishlist) and !todo/*/*"
+[[postsparkline pages="todo/* and !todo/done and !link(todo/done) and !todo/*/*"
 max=12 ymin=10 formula=permonth style=bar barwidth=2 barspacing=1 height=13]]
 this many are being added per month  
 [[postsparkline pages="todo/* and !todo and link(todo/done)"
 max=12 ymin=10 formula=permonth time=mtime style=bar barwidth=2 barspacing=1 height=13]]
-while this many are being fixed.
+while this many are being fixed,  
+"""]]
+[[postsparkline pages="todo/* and !todo and link(todo/done) and link(patch)"
+max=12 ymin=10 formula=permonth time=mtime style=bar barwidth=2 barspacing=1 height=13]]
+and these were fixed by a patch.
 """]]
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
