--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -10,10 +10,7 @@ max=12 ymin=10 formula=permonth style=bar barwidth=2 barspacing=1 height=13]]
 this many are being added per month  
 [[postsparkline pages="todo/* and !todo and link(todo/done)"
 max=12 ymin=10 formula=permonth time=mtime style=bar barwidth=2 barspacing=1 height=13]]
-while this many are being fixed (these
-[[postsparkline pages="todo/* and !todo and (link(todo/done) or link(patch))"
-max=12 ymin=10 formula=permonth time=mtime style=bar barwidth=2 barspacing=1 height=13]]
-thanks to users' patches).
+while this many are being fixed.
 """]]
 
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
