--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -231,9 +231,10 @@ configuration options of their own.
 
 * --libdir directory
 
-  Makes ikiwiki look in the specified directory first, before the regular perl
-  library directories. For example, if you set libdir to "/home/you/.ikiwiki/",
-  you can install plugins in "/home/you/.ikiwiki/IkiWiki/Plugin/".
+  Makes ikiwiki look in the specified directory first, before the regular
+  locations when loading library files and plugins. For example, if you set
+  libdir to "/home/you/.ikiwiki/", you can install a Foo.pm plugin as
+  "/home/you/.ikiwiki/IkiWiki/Plugin/Foo.pm".
 
 * --discussion, --no-discussion
 
