--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -81,6 +81,10 @@ and more. Most of ikiwiki's features are actually provided by plugins.
 Ikiwiki's backend RCS support is also pluggable, so support for new
 revision control systems can be added to ikiwiki.
 
+The standard language for ikiwiki plugins is perl, but ikiwiki also supports
+[[plugins/write/external]] plugins: Standalone programs that can be written in
+any language and communicate with ikiwiki using XML RPC.
+
 ## [[todo/utf8]]
 
 After rather a lot of fiddling, we think that ikiwiki correctly and fully
