--- a/debian/changelog
+++ b/debian/changelog
@@ -24,7 +24,7 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Add time=mtime option to postsparkline.
   * Fix --libdir to work at the command line.
   * Plugins can now be written as standalone external programs, which can
-    be written in any language that can do XML::RPC.
+    be written in any language that can do XML RPC.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 12 Aug 2007 20:49:23 -0400
 
