--- a/doc/plugins/write/external.mdwn
+++ b/doc/plugins/write/external.mdwn
@@ -8,6 +8,8 @@ written in perl, but is intended to be an example of how to write an
 external plugin in your favorite programming language. Wow us at how much
 easier you can do the same thing in your favorite language. ;-)
 
+[[toc ]]
+
 ## How external plugins use XML RPC
 
 While XML RPC is typically used over http, ikiwiki doesn't do that.
