improved docs, add a tutorial for writing plugins

--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -4,9 +4,9 @@ plugins are included with ikiwiki.
 [[pagestats pages="plugins/type/* and !plugins/type/slow"]]
 
 There's documentation if you want to [[write]] your own plugins, or you can
-install and use plugins [[contributed|contrib]] by others.
+[[install]] plugins [[contributed|contrib]] by others.
 
-To enable plugins, use the `--plugin` switch described in
+To enable a plugin, use the `--plugin` switch described in
 [[usage]], or the equivalent `add_plugins` line in [[ikiwiki.setup]].
 Enable the [[goodstuff]] plugin to get a nice selection of plugins that
 will fit most uses of ikiwiki.
@@ -14,6 +14,6 @@ will fit most uses of ikiwiki.
 ## Plugin directory
 
 [[inline pages="plugins/* and !plugins/type/* and !plugins/write and
-!plugins/contrib and !*/Discussion"
+!plugins/contrib and !plugins/install and !*/Discussion"
 feedpages="created_after(plugins/graphviz)" archive="yes"
 rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
