--- a/doc/plugins/write/tutorial.mdwn
+++ b/doc/plugins/write/tutorial.mdwn
@@ -66,7 +66,7 @@ Always put this as the last line in your perl modules. Perl likes it.
 
 Ok, done! If you save the plugin, you can copy it to a place your ikiwiki
 looks for plugins (`/usr/share/perl5/IkiWiki/Plugins/` is a good bet; see
-[[plugin/install]] for the details of how to figure out where to
+[[install]] for the details of how to figure out where to
 install it). Then configure ikiwiki to use the plugin, and you're ready to
 insert at least the first two numbers of the Fibonachi sequence on web
 pages. Behold, the power of ikiwiki! ...
