--- a/doc/bugs/CGI_problem_with_some_webservers.mdwn
+++ b/doc/bugs/CGI_problem_with_some_webservers.mdwn
@@ -1,6 +1,8 @@
-The edit function has a problem when running with [[debpkg thttpd]]
-or [[debpkg mini-httpd]]: for some reason the headers ikiwiki
-outputs are transmitted as the page content.
+The "ikwiki.cgi?page=index&do=edit" function has a problem
+when running with [[debpkg thttpd]] or [[debpkg mini-httpd]]:
+for some reason the headers ikiwiki outputs are transmitted
+as the page content. Surprisingly, the "do=prefs" function
+works as expected.
 
 Here is what it looks like in iceweasel:
 
