web commit by http://jeremie.koenig.myopenid.com/

--- a/doc/bugs/CGI_problem_with_some_webservers.mdwn
+++ b/doc/bugs/CGI_problem_with_some_webservers.mdwn
@@ -18,3 +18,9 @@ Here is what it looks like in iceweasel:
 Ikiwiki runs fine with [[debpkg boa]].
 
 --[[JeremieKoenig]]
+
+It doesn't work for signin either.
+What is the reason for these "header => 1" in FormBuilder initialisations?
+Why do they appear two times with conflicting values in the very same hashes?
+
+--[[JeremieKoenig]]
