--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     be written in any language that can do XML RPC.
   * Change yet again how unhandled and escaped preprocessor directives are
     re-output onto the page. Hopefully I finally got it right..
+  * Fix bug in deletion/move during edit code introduced in 1.44. Need to take
+    the underlaydir into account.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 13 Aug 2007 13:34:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Aug 2007 15:41:21 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
