--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     re-output onto the page. Hopefully I finally got it right..
   * Fix bug in deletion/move during edit code introduced in 1.44. Need to take
     the underlaydir into account.
+  * Fix bug when editing file from underlaydir, need to rcs_add it even though
+    a page creation isn't occuring.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 14 Aug 2007 15:41:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 14 Aug 2007 16:08:20 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
