web commit by http://jeremie.koenig.myopenid.com/

--- a/doc/bugs/CGI_problem_with_some_webservers.mdwn
+++ b/doc/bugs/CGI_problem_with_some_webservers.mdwn
@@ -63,3 +63,5 @@ Why do they appear two times with conflicting values in the very same hashes?
 >>> of cgi scripts besides ikiwiki. And of course there are many many cases
 >>> where ikiwiki might output to stderr, and that's the right thing to do.
 >>> So I don't see any way to address this in ikiwiki. --[[Joey]]
+
+>>>> (reported as [[debbug 437927]] and [[debbug 437932]]) --[[JeremieKoenig]]
