web commit by http://joey.kitenet.net/

--- a/doc/plugins/conditional/discussion.mdwn
+++ b/doc/plugins/conditional/discussion.mdwn
@@ -10,3 +10,5 @@ is supposed to have *no* blank lines between...
 * **Mach** and **Mig**.
 
 -- [[tschwinge]]
+
+> The blank lines in this example are coming from the newline after `then="`, and also from the newline before the close quote. If you remove those newlines, I think it should work. --[[Joey]]
