--- a/doc/plugins/conditional/discussion.mdwn
+++ b/doc/plugins/conditional/discussion.mdwn
@@ -18,3 +18,6 @@ is supposed to have *no* blank lines between...
 >> Continued.  But on the other
 >> [[if test="enabled(trallala)" then="foot" else="hand:"]]
 >> Continued.  --[[tschwinge]]
+
+>>> Seems ok, no? The only linebreaks I see in the source are the ones you
+>>> put at the end of the lines. --[[Joey]]
