* Various minor fixes and stylistic improvements suggested by Perl::Critic.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     the underlaydir into account.
   * Fix bug when editing file from underlaydir, need to rcs_add it even though
     a page creation isn't occuring.
+  * Various minor fixes and stylistic improvements suggested by Perl::Critic.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 14 Aug 2007 16:08:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Aug 2007 03:05:15 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
