--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -68,7 +68,7 @@ Personal sites and blogs
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 * I keep my personal and project notes in a private ikiwiki - it's the perfect tool for this task. - [h01ger](http://layer-acht.org/)
 * NicolasLimare ([nil](http://poivron.org/~nil/)+[lab](http://www.ann.jussieu.fr/~limare/)+[id](http://nicolas.limare.net/))
-* [Patrick Winnertz (winnie)(https://www.der-winnie.de)
+* [Patrick Winnertz (winnie)](https://www.der-winnie.de)
 * Andrew Sackville-West has setup a [family wiki](http://wiki.swclan.homelinux.org)
 
 Please feel free to add your own ikiwiki site!
