web commit by http://jeremie.koenig.myopenid.com/: add my email address

--- a/doc/users/JeremieKoenig.mdwn
+++ b/doc/users/JeremieKoenig.mdwn
@@ -1,2 +1,3 @@
 I'm planning to push for ikiwiki as a supplement/replacement for SPIP at some site.
 I will especially need good review and translations support in order to succeed.
+My email address is `jk@jk.fr.eu.org`.
